--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h2>Vendas Delivery</h2>
     </a>
 
-    <a class="card" href="https://link-para-meta-faturamento.com" target="_blank">
+    <a class="card" href="https://grupodvbr.github.io/resumo-de-meta/" target="_blank">
       <div class="icon">📊</div>
       <h2>Meta de Faturamento</h2>
     </a>
