--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <h2>Meta de Faturamento</h2>
     </a>
 
-    <a class="card" href="https://link-para-conciliacao.com" target="_blank">
+    <a class="card" href="https://grupodvbr.github.io/CONCILIA-O-DE-CART-ES-E-BANC-RIA/" target="_blank">
       <div class="icon">💳</div>
       <h2>Conciliações</h2>
     </a>
