--- a/index.html
+++ b/index.html
@@ -136,27 +136,27 @@
 
   <!-- Cards -->
   <div class="container">
-    <a class="card" href="https://grupodvbr.github.io/RESUMO-TRANSA-ES-FINANCEIRAS/" target="_blank">
+    <a class="card" href="index.resumofinanceiro" target="_blank">
       <div class="icon">📈</div>
-      <h2>Resumo de transações financeiras</h2>
+      <h2>Resumo Financeiro</h2>
     </a>
 
-    <a class="card" href="https://link-para-cancelamentos.com" target="_blank">
+    <a class="card" href="index.cancelamentos" target="_blank">
       <div class="icon">❌</div>
       <h2>Cancelamentos</h2>
     </a>
 
-    <a class="card" href="https://grupodvbr.github.io/RESUMO-DELIVERY/" target="_blank">
+    <a class="card" href="index.delivery" target="_blank">
       <div class="icon">🚚</div>
       <h2>Vendas Delivery</h2>
     </a>
 
-    <a class="card" href="https://grupodvbr.github.io/resumo-de-meta/" target="_blank">
+    <a class="card" href="index.meta" target="_blank">
       <div class="icon">📊</div>
       <h2>Meta de Faturamento</h2>
     </a>
 
-    <a class="card" href="https://grupodvbr.github.io/CONCILIA-O-DE-CART-ES-E-BANC-RIA/" target="_blank">
+    <a class="card" href="index.conciliacao" target="_blank">
       <div class="icon">💳</div>
       <h2>Conciliações</h2>
     </a>
