--- a/delivery.html
+++ b/delivery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Vendas Delivery</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body { font-family: Arial, sans-serif; background: #f7f7f7; margin: 0; padding: 0; }
@@ -19,187 +19,12 @@
       margin-right: 20px;
     }
     header h1 {
-      margin: 0;
+      margin: 0 auto;
       font-size: 1.6em;
       font-weight: bold;
-    }<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Análise Financeira</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: white;
-    }
-
-    #splash {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      transition: opacity 0.5s ease;
-    }
-
-    #splash img {
-      width: 150px;
-      animation: pulse 1.5s infinite;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.05); opacity: 0.9; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-
-    header {
-      background-color: white;
-      color: #2c3e50;
-      padding: 20px 40px;
-      display: flex;
-      align-items: center;
-      border-bottom: 1px solid #ccc;
-    }
-
-    header img {
-      height: 50px;
-      margin-right: 20px;
-    }
-
-    header h1 {
+      text-align: center;
       flex: 1;
-      text-align: center;
-      font-size: 24px;
-      margin: 0;
-      font-weight: bold;
     }
-
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 20px;
-      padding: 30px;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .card {
-      background: white;
-      border-radius: 12px;
-      padding: 30px 20px;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.2s ease;
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-      background-color: #f0f8ff;
-    }
-
-    .card h2 {
-      margin: 0;
-      font-size: 20px;
-      color: #2c3e50;
-    }
-
-    .icon {
-      font-size: 40px;
-      color: #2980b9;
-      margin-bottom: 10px;
-    }
-
-    @media (max-width: 500px) {
-      header {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-
-      header img {
-        margin: 0 0 10px;
-      }
-
-      header h1 {
-        font-size: 20px;
-        text-align: center;
-      }
-
-      .card h2 {
-        font-size: 18px;
-      }
-
-      .icon {
-        font-size: 32px;
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Tela de entrada -->
-  <div id="splash">
-    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-  </div>
-
-  <!-- Cabeçalho -->
-  <header>
-    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
-    <h1>Análise Financeira</h1>
-  </header>
-
-  <!-- Cards -->
-  <div class="container">
-    <a class="card" href="https://grupodvbr.github.io/RESUMO-TRANSA-ES-FINANCEIRAS/" target="_blank">
-      <div class="icon">📈</div>
-      <h2>Resumo de transações financeiras</h2>
-    </a>
-
-    <a class="card" href="https://link-para-cancelamentos.com" target="_blank">
-      <div class="icon">❌</div>
-      <h2>Cancelamentos</h2>
-    </a>
-
-    <a class="card" href="https://grupodvbr.github.io/RESUMO-DELIVERY/" target="_blank">
-      <div class="icon">🚚</div>
-      <h2>Vendas Delivery</h2>
-    </a>
-
-    <a class="card" href="https://grupodvbr.github.io/resumo-de-meta/" target="_blank">
-      <div class="icon">📊</div>
-      <h2>Meta de Faturamento</h2>
-    </a>
-
-    <a class="card" href="https://grupodvbr.github.io/CONCILIA-O-DE-CART-ES-E-BANC-RIA/" target="_blank">
-      <div class="icon">💳</div>
-      <h2>Conciliações</h2>
-    </a>
-  </div>
-
-  <!-- Script splash -->
-  <script>
-    window.addEventListener('load', () => {
-      const splash = document.getElementById('splash');
-      setTimeout(() => {
-        splash.style.opacity = '0';
-        setTimeout(() => splash.style.display = 'none', 500);
-      }, 1000);
-    });
-  </script>
-
-</body>
-</html>
-
     .container { padding: 20px; }
     .chart-box, .total-box, .resumo-box {
       background: white;
@@ -344,8 +169,8 @@ function setDefaultDates() {
   const ano = hoje.getFullYear();
   const mes = hoje.getMonth(); // mês atual (0-11)
 
-  const inicio = new Date(ano, mes, 1); // dia 01 do mês atual
-  const fim = new Date(ano, mes, 5);    // dia 05 do mês atual
+  const inicio = new Date(ano, mes - 1, 1); // dia 01 do mês anterior
+  const fim = new Date(ano, mes, 0); // último dia do mês anterior
 
   document.getElementById("dataInicio").value = inicio.toISOString().split('T')[0];
   document.getElementById("dataFim").value = fim.toISOString().split('T')[0];
