--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <h2>Cancelamentos</h2>
     </a>
 
-    <a class="card" href="index.delivery" target="_blank">
+    <a class="card" href="index.delivery.html" target="_blank">
       <div class="icon">🚚</div>
       <h2>Vendas Delivery</h2>
     </a>
