--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
 
   <!-- Cards -->
   <div class="container">
-    <a class="card" href="index.resumofinanceiro" target="_blank">
+    <a class="card" href="index.resumofinanceiro.html" target="_blank">
       <div class="icon">📈</div>
       <h2>Resumo Financeiro</h2>
     </a>
 
-    <a class="card" href="index.cancelamentos" target="_blank">
+    <a class="card" href="index.cancelamentos.html" target="_blank">
       <div class="icon">❌</div>
       <h2>Cancelamentos</h2>
     </a>
@@ -151,12 +151,12 @@
       <h2>Vendas Delivery</h2>
     </a>
 
-    <a class="card" href="index.meta" target="_blank">
+    <a class="card" href="index.meta.html" target="_blank">
       <div class="icon">📊</div>
       <h2>Meta de Faturamento</h2>
     </a>
 
-    <a class="card" href="index.conciliacao" target="_blank">
+    <a class="card" href="index.conciliacao.html" target="_blank">
       <div class="icon">💳</div>
       <h2>Conciliações</h2>
     </a>
