--- a/index.resumofinanceiro.html
+++ b/index.resumofinanceiro.html
@@ -1,1 +1,302 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Resumo Financeiro   Grupo DV</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: white;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: white;
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid #ccc;
+    }
+    header img {
+      height: 50px;
+      margin-right: 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.6em;
+      font-weight: bold;
+    }
+    .conteudo {
+      padding: 15px;
+    }
+    .filtros {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-width: 500px;
+      margin: 0 auto 20px;
+    }
+    .filtros label {
+      font-size: 0.9em;
+      display: flex;
+      flex-direction: column;
+    }
+    .filtros input,
+    .filtros select,
+    .filtros button {
+      padding: 10px;
+      font-size: 1em;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    .empresa-box {
+      background: #d0f0d5;
+      border-radius: 10px;
+      padding: 15px;
+      margin-bottom: 15px;
+      box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    }
+    .empresa-box h2 {
+      margin: 0 0 10px;
+      font-size: 1.1em;
+    }
+    .empresa-box ul {
+      list-style: none;
+      padding-left: 0;
+      margin: 0;
+      font-size: 0.95em;
+    }
+    .empresa-box li {
+      margin-bottom: 4px;
+    }
+    .grafico-desktop {
+      display: none;
+    }
+    #exportar {
+      margin: 0 auto 20px;
+      display: block;
+      max-width: 500px;
+    }
+    @media (min-width: 768px) {
+      .grafico-desktop {
+        display: block;
+        margin-top: 15px;
+      }
+      canvas {
+        max-width: 100%;
+        margin: 0 auto;
+      }
+    }
+  </style>
+</head>
+<body>
 
+<header>
+  <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+  <h1>Resumo Financeiro    Grupo DV</h1>
+</header>
+
+<div class="conteudo">
+  <div class="filtros">
+    <label>
+      Data Início:
+      <input type="date" id="dataInicio" />
+    </label>
+    <label>
+      Data Fim:
+      <input type="date" id="dataFim" />
+    </label>
+    <label>
+      Empresa:
+      <select id="empresaFiltro">
+        <option value="">Todas</option>
+      </select>
+    </label>
+    <button onclick="aplicarFiltro()">Filtrar</button>
+    <button id="exportar" onclick="exportarPDF()">📄 Exportar PDF</button>
+    <button id="enviarWhatsapp">📲 Enviar pelo WhatsApp</button>
+  </div>
+
+  <div id="painel"></div>
+</div>
+
+<script>
+const url = 'https://script.google.com/macros/s/AKfycbz9GQLrIB4oiX0jBQ7yaDO_IiMz3ER7lQT094sp5y2VUGgQWBaz3G1fa7s4ZbiWli_O/exec';
+
+const emojis = {
+  "DINHEIRO": "💵",
+  "CRÉDITO": "💳",
+  "DÉBITO": "🏦",
+  "PIX": "💲",
+  "ONLINE": "💻",
+  "CREDIÁRIO": "📋",
+  "VOUCHER": "🎫",
+  "BONIFICAÇÃO": "🎁",
+  "CONSUMO INTERNO": "👔",
+  "BOLETO": "📃",
+  "MARKETING": "📣",
+  "CONSUMO SÓCIO": "👔",
+  "CATÁLOGO DELIVERY": "🛒",
+  "IFOOD": "🍱",
+  "DELIVERY MUCH": "🍔",
+  "TRANSFERÊNCIA BANCÁRIA": "🏛️",
+  "ERROS DE GARÇONS": "🏛️",
+  "OUTROS": "🗂"
+};
+
+let dados = [];
+
+window.onload = () => {
+  const ontem = new Date();
+  ontem.setDate(ontem.getDate() - 1);
+  document.getElementById("dataInicio").value = ontem.toISOString().split('T')[0];
+  carregarDados();
+};
+
+async function carregarDados() {
+  try {
+    const resposta = await fetch(url);
+    dados = await resposta.json();
+
+    const empresas = [...new Set(dados.map(item => item.Empresa))].sort();
+    const select = document.getElementById("empresaFiltro");
+    select.innerHTML = '<option value="">Todas</option>';
+    empresas.forEach(emp => {
+      const option = document.createElement("option");
+      option.value = emp;
+      option.textContent = emp;
+      select.appendChild(option);
+    });
+
+    aplicarFiltro();
+  } catch (e) {
+    document.getElementById("painel").innerHTML = "Erro ao carregar dados.";
+    console.error(e);
+  }
+}
+
+function aplicarFiltro() {
+  const inicio = document.getElementById("dataInicio").value;
+  const fim = document.getElementById("dataFim").value;
+  const empresaSelecionada = document.getElementById("empresaFiltro").value;
+
+  const painel = document.getElementById("painel");
+  painel.innerHTML = "";
+
+  const dadosFiltrados = dados.filter(item => {
+    const dataOk = (!inicio || item.Data >= inicio) && (!fim || item.Data <= fim);
+    const empresaOk = !empresaSelecionada || item.Empresa === empresaSelecionada;
+    return dataOk && empresaOk;
+  });
+
+  const empresas = [...new Set(dadosFiltrados.map(item => item.Empresa))];
+
+  empresas.forEach(emp => {
+    const dadosEmpresa = dadosFiltrados.filter(i => i.Empresa === emp);
+    const total = dadosEmpresa.reduce((s, i) => s + parseFloat(i.Valor), 0);
+
+    const box = document.createElement("div");
+    box.className = "empresa-box";
+
+    let html = `<h2>${emp.toUpperCase()} — R$ ${total.toLocaleString('pt-BR', {minimumFractionDigits: 2})}</h2><ul>`;
+    dadosEmpresa.forEach(item => {
+      const emoji = emojis[item.Categoria.toUpperCase()] || "📌";
+      html += `<li>${emoji} ${item.Categoria}: R$ ${parseFloat(item.Valor).toLocaleString('pt-BR', {minimumFractionDigits: 2})}</li>`;
+    });
+    html += `</ul>`;
+    box.innerHTML = html;
+
+    const canvasContainer = document.createElement("div");
+    canvasContainer.className = "grafico-desktop";
+    const canvas = document.createElement("canvas");
+    canvasContainer.appendChild(canvas);
+    box.appendChild(canvasContainer);
+    painel.appendChild(box);
+
+    desenharGrafico(canvas, dadosEmpresa);
+  });
+
+  if (empresas.length === 0) {
+    painel.innerHTML = "<p style='text-align:center'>Nenhum dado encontrado para os filtros selecionados.</p>";
+  }
+}
+
+function desenharGrafico(canvas, dadosEmpresa) {
+  if (window.innerWidth < 768) return;
+
+  new Chart(canvas.getContext("2d"), {
+    type: 'pie',
+    data: {
+      labels: dadosEmpresa.map(e => `${emojis[e.Categoria.toUpperCase()] || "📌"} ${e.Categoria}`),
+      datasets: [{
+        data: dadosEmpresa.map(e => parseFloat(e.Valor)),
+        backgroundColor: dadosEmpresa.map((_, i) => `hsl(${i * 30}, 70%, 60%)`)
+      }]
+    },
+    options: {
+      plugins: {
+        title: { display: true, text: "Distribuição por Categoria" },
+        legend: { position: "bottom" }
+      }
+    }
+  });
+}
+
+function exportarPDF() {
+  const painel = document.getElementById("painel");
+  const opt = {
+    margin:       0.3,
+    filename:     'relatorio-financeiro.pdf',
+    image:        { type: 'jpeg', quality: 0.98 },
+    html2canvas:  { scale: 2 },
+    jsPDF:        { unit: 'in', format: 'a4', orientation: 'portrait' }
+  };
+  html2pdf().from(painel).set(opt).save();
+}
+
+// NOVA FUNÇÃO PARA WHATSAPP
+document.getElementById("enviarWhatsapp").addEventListener("click", () => {
+  const dataInicio = document.getElementById("dataInicio").value;
+  const dataFim = document.getElementById("dataFim").value;
+  const boxes = document.querySelectorAll(".empresa-box");
+  if (!boxes.length) return alert("Nenhum resumo encontrado para enviar.");
+
+  function formatarDataBR(iso) {
+    if (!iso) return "";
+    const [y, m, d] = iso.split("-");
+    return `${d}/${m}/${y}`;
+  }
+
+  const dataBR = (dataInicio === dataFim)
+    ? formatarDataBR(dataInicio)
+    : `${formatarDataBR(dataInicio)} a ${formatarDataBR(dataFim)}`;
+
+  let mensagem = `📈 *Fechamento Diário - Financeiro* — ${dataBR}\n\n`;
+
+  boxes.forEach(box => {
+    const titulo = box.querySelector("h2")?.innerText;
+    const itens = [...box.querySelectorAll("li")].map(li => li.innerText).join("\n");
+    mensagem += `*${titulo}*\n${itens}\n\n`;
+  });
+
+  const numero = "5577999761436"; // Altere para o número desejado
+  const link = `https://wa.me/${numero}?text=` + encodeURIComponent(mensagem.trim());
+  window.open(link, "_blank");
+});
+</script>
+
+
+</body>
+</html>
