--- a/index.meta.html
+++ b/index.meta.html
@@ -2,97 +2,171 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Metas de Receita - Grupo DV</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #e8f5e9;
+      background: #f7f7f7;
       margin: 0;
-      padding: 20px;
+      padding: 0;
     }
-    h1 {
+
+    header {
+      background-color: white;
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid #ccc;
+    }
+
+    header img {
+      height: 50px;
+      margin-right: 20px;
+    }
+
+    header h1 {
+      margin: 0 auto;
+      font-size: 1.6em;
+      font-weight: bold;
       text-align: center;
+      flex: 1;
     }
-    .filtros {
-      max-width: 600px;
-      margin: 0 auto 10px;
+
+    .container {
+      padding: 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .filters {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
-      justify-content: center;
+      margin-bottom: 20px;
+      align-items: end;
     }
-    .filtros label {
-      display: flex;
-      flex-direction: column;
-      font-size: 0.9em;
+
+    .filters label {
+      font-weight: bold;
     }
-    .filtros input, .filtros select {
-      padding: 8px;
-      font-size: 1em;
-      border-radius: 6px;
+
+    .filters select,
+    .filters input[type="date"] {
+      padding: 10px;
+      border-radius: 8px;
       border: 1px solid #ccc;
+      width: 100%;
     }
+
+    .filters > div {
+      flex: 1 1 200px;
+    }
+
+    .filters button,
+    #btnWhats {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .filters button {
+      background-color: #1e1e2f;
+      color: white;
+    }
+
     #btnWhats {
       background-color: #25d366;
       color: white;
-      border: none;
-      padding: 10px 16px;
-      font-size: 1em;
-      border-radius: 8px;
-      cursor: pointer;
-      display: block;
-      margin: 10px auto 10px;
+      margin: 10px 0;
     }
+
     .metas-box {
-      background: #d0f0d5;
+      background: white;
       border-radius: 10px;
-      padding: 15px;
-      margin: 10px auto;
-      max-width: 600px;
-      box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
     }
+
     .metas-box h2 {
       margin: 0 0 10px;
+      font-size: 1.2em;
+      color: #2c3e50;
     }
+
     .metas-box p {
-      margin: 3px 0;
-      font-size: 0.95em;
+      margin: 5px 0;
+      font-size: 1em;
     }
-    #graficoContainer {
-      max-width: 700px;
-      margin: 20px auto;
+
+    .chart-box {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+
+    .chart-box h3 {
+      margin-top: 0;
+    }
+
+    .chart-box canvas {
+      max-width: 100%;
+      height: 300px;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+      header img {
+        margin: 0 0 10px;
+      }
     }
   </style>
 </head>
 <body>
 
-<h1>📊 Painel de Metas - Grupo DV</h1>
+<header>
+  <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+  <h1>📊 Painel de Metas - Grupo DV</h1>
+</header>
 
-<div class="filtros">
-  <label>
-    Data Início:
-    <input type="date" id="dataInicio">
-  </label>
-  <label>
-    Data Fim:
-    <input type="date" id="dataFim">
-  </label>
-  <label>
-    Empresa:
-    <select id="empresaFiltro">
-      <option value="">Todas</option>
-    </select>
-  </label>
-  <button onclick="carregarMetas()">Filtrar</button>
-</div>
+<div class="container">
+  <div class="filters">
+    <div>
+      <label>Data Início:</label>
+      <input type="date" id="dataInicio">
+    </div>
+    <div>
+      <label>Data Fim:</label>
+      <input type="date" id="dataFim">
+    </div>
+    <div>
+      <label>Empresa:</label>
+      <select id="empresaFiltro">
+        <option value="">Todas</option>
+      </select>
+    </div>
+    <div>
+      <button onclick="carregarMetas()">Filtrar</button>
+    </div>
+  </div>
 
-<button id="btnWhats">📲 Enviar via WhatsApp</button>
+  <button id="btnWhats">📲 Enviar via WhatsApp</button>
 
-<div id="painelMetas"></div>
-<div id="graficoContainer">
-  <canvas id="graficoFaturamento"></canvas>
+  <div id="painelMetas"></div>
+
+  <div class="chart-box" id="graficoContainer">
+    <h3>📈 Evolução do Faturamento</h3>
+    <canvas id="graficoFaturamento"></canvas>
+  </div>
 </div>
 
 <script>
@@ -109,11 +183,13 @@ function formatarDataBR(dataISO) {
 }
 
 function preencherDataOntem() {
-  const ontem = new Date();
-  ontem.setDate(ontem.getDate() - 1);
-  const data = ontem.toISOString().split('T')[0];
-  document.getElementById("dataInicio").value = data;
-  document.getElementById("dataFim").value = data;
+  const hoje = new Date();
+  const ano = hoje.getFullYear();
+  const mes = hoje.getMonth();
+  const inicio = new Date(ano, mes - 1, 1);
+  const fim = new Date(ano, mes, 0);
+  document.getElementById("dataInicio").value = inicio.toISOString().split("T")[0];
+  document.getElementById("dataFim").value = fim.toISOString().split("T")[0];
 }
 
 async function carregarMetas() {
@@ -124,7 +200,6 @@ async function carregarMetas() {
   const dataFim = document.getElementById("dataFim").value;
   const empresa = document.getElementById("empresaFiltro").value;
 
-  // Cálculo baseado na data final
   let diasCorridosNoMes = 30;
   let diasCorridosAteData = 30;
 
@@ -208,9 +283,11 @@ function mostrarGrafico(metas) {
       datasets: [{
         label: 'Evolução do Faturamento',
         data: valores,
-        fill: false,
+        fill: true,
         borderColor: '#388e3c',
-        tension: 0.1
+        backgroundColor: 'rgba(56, 142, 60, 0.1)',
+        tension: 0.3,
+        pointRadius: 4
       }]
     },
     options: {
@@ -218,8 +295,7 @@ function mostrarGrafico(metas) {
       plugins: {
         legend: { display: true },
         title: {
-          display: true,
-          text: 'Evolução diária do faturamento'
+          display: false
         }
       },
       scales: {
